# pet-projects

./: README.md
CMake/: CMakeLists.txt  main.cpp  readme.md  server.py
python/: lesson 1.py  lesson 2.py  lesson 3.py  lesson 4.py  lesson 5_deep.py  lesson 6.py  readme.md
tailwind/: firstProjectTailwind.html  readme.md  tailwindDay1.html  tailwindDay2.html  tailwindDay3.html  tailwindDay4.html
